# Snorkel-Wordle-Benchmark

./: .gitignore  FiendishWords.py  README.md  data.py  pyproject.toml  type.py  wordle_env.py
Data/: FiendishWords.py  __init__.py  all_models.yaml  data.py  models.yaml
Jinja/templates/: system_prompt.txt
Results/: results.json
