[project]
name = "wordle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "jinja2>=3.1.0",
    "langfuse>=3.1.3",
    "litellm>=1.74.0.post1",
    "nltk>=3.9.1",
    "numpy>=2.3.1",
    "openai>=1.0.0",
    "pandas>=2.3.1",
    "pip>=25.1.1",
    "pydantic>=2.11.7",
    "pyenchant>=3.2.2",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "setuptools>=80.9.0",
    "tqdm>=4.66.0",
    "wheel>=0.45.1",
]
